--- a/pom.xml
+++ b/pom.xml
@@ -56,5 +56,15 @@
             <artifactId>jb</artifactId>
             <version>1.0.13</version>
         </dependency>
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-api</artifactId>
+            <version>1.7.31</version>
+        </dependency>
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-simple</artifactId>
+            <version>1.7.31</version>
+        </dependency>
     </dependencies>
 </project>
