jcenter-bintrayが廃止に伴うライブラリをローカル物を利用するように修正

--- a/pom.xml
+++ b/pom.xml
@@ -44,17 +44,32 @@
             </plugin>
         </plugins>
     </build>
-    <repositories>
-        <repository>
-            <id>JCenter</id>
-            <url>https://jcenter.bintray.com</url>
-        </repository>
-    </repositories>
     <dependencies>
         <dependency>
             <groupId>org.goldrenard</groupId>
             <artifactId>jb</artifactId>
             <version>1.0.13</version>
+            <scope>system</scope>
+            <systemPath>${project.basedir}/libs/jb-1.0.13.jar</systemPath>
+        </dependency>
+        <dependency>
+            <groupId>net.reduls.sanmoku</groupId>
+            <artifactId>sanmoku</artifactId>
+            <version>0.0.5</version>
+            <scope>system</scope>
+            <systemPath>${project.basedir}/libs/sanmoku-0.0.5.jar</systemPath>
+        </dependency>
+        <dependency>
+            <groupId>net.reduls.sanmoku</groupId>
+            <artifactId>sanmoku-feature-ex</artifactId>
+            <version>0.0.1</version>
+            <scope>system</scope>
+            <systemPath>${project.basedir}/libs/sanmoku-feature-ex-0.0.1.jar</systemPath>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-lang3</artifactId>
+            <version>3.12.0</version>
         </dependency>
         <dependency>
             <groupId>org.slf4j</groupId>
